# Oxide

./: Cargo.toml  README.md
examples/: button_layout.rs  test.rs
src/: canvas.rs  checkbutton.rs  dialog.rs  hlayout.rs  label.rs  lib.rs  stdbutton.rs  vlayout.rs
src/core/: alignable.rs  button.rs  frame.rs  layout.rs  mod.rs  painter.rs  widget.rs
